--- a/index.html
+++ b/index.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my first github learning</title>
 </head>
+
 <body>
     <h1>learning always better</h1>
+    <p>you are here</p>
     <script>
-        let a=5;
-let arr=[3,5,{a:"kashif",b:"munir"},8];
-arr.push(30);
-console.log(arr);
+        let a = 5;
+        let arr = [3, 5, { a: "kashif", b: "munir" }, 8];
+        arr.push(30);
+        console.log(arr);
     </script>
 </body>
+
 </html>
